--- a/views/ng-templates/Component.ejs
+++ b/views/ng-templates/Component.ejs
@@ -13,8 +13,17 @@
     <div class="ports">
       <div class="input">
         <div>
-          <div data-port="{{port.name}}" ng-repeat="port in inputPorts">        
+          <div class="tip" data-port="{{port.name}}" ng-repeat="port in inputPorts">        
             <span class="box"></span>
+            <span class="relative">
+              <div class="tooltip"> 
+
+            Drag me to create a pipe.
+            <br>Drop it on an empty space to
+           create and connect to a new component.
+            <br>Drop me above above one of us
+            to connect to another component! </div>
+          </span>
             <span class="text" ng-bind="port.text"></span>
           </div>
         </div>
@@ -42,11 +51,11 @@
   <div ng-switch-when="input">
     <div class="ports">
       <div class="output">
-        <div>
+        <div class="input-group input-group-sm">
           <div ng-repeat="port in data.ports track by $index">
           <button  ng-if="!collapsed" ng-click="data.ports.splice($index,1)" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-remove"></span>
         </button>        
-          <input type="text" ng-model="data.ports[$index]">
+          <input type="text" ng-model="data.ports[$index]" class="form-control">
           <span data-port="{{'macroIn'+$index}}"><span class="box"></span></span>
         </div>
                 </div>
@@ -59,10 +68,10 @@
   <div ng-switch-when="output">
     <div class="ports">
       <div class="input">
-        <div>
+        <div class="input-group input-group-sm">
         <div ng-repeat="port in data.ports track by $index">        
           <span data-port="{{'macroOut'+$index}}"><span class="box"></span></span>
-          <input type="text" ng-model="data.ports[$index]">
+          <input type="text" ng-model="data.ports[$index]" class="form-control">
           <button  ng-if="!collapsed" ng-click="data.ports.splice($index,1)" class="btn btn-xs btn-default">
           <span class="glyphicon glyphicon-remove"></span>
         </button>        </div>
@@ -76,7 +85,9 @@
 
 
   <div ng-switch-when="file">
-    <input parameter-field class="filename" type="text" ng-model="data.filename">
+    <div class="input-group input-group-sm">
+      <input parameter-field class="filename form-control" type="text" ng-model="data.filename">
+    </div>
   </div>
   
   <div ng-switch-when="macro">
