--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -13,8 +13,10 @@
   <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li class="dropdown" ng-controller="macroCtrl">
-      <a href="#" data-toggle="dropdown" class="dropdown-toggle" is-open="status.macroDropdown">
-      Macro <b class="caret"></b></a>
+      <a href="#" data-toggle="dropdown" class="tip bottom left dropdown-toggle" is-open="status.macroDropdown">
+        <div class="tooltip">Here you create and edit macros</div>
+        Macro <b class="caret"></b>
+      </a>
         <ul class="dropdown-menu">
           <li><a mousetrap="Shift+M" ng-click="newMacroModal()">New Macro</a></li>
           <li class="divider"></li>
@@ -22,10 +24,18 @@
           <li ng-repeat="macro in graphModel.macroList"><a ng-bind="macro" ng-click="; status.macroDropdown = false; macroEditModal(macro)"></a></li>
         </ul>
       </li>
+
+
+
+
       <li class="dropdown" is-open="status.isopen">
-      <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-        Add Command 
-        <b class="caret"></b></a>
+
+
+      <a href="#" data-toggle="dropdown" class="tip bottom dropdown-toggle">
+        <div class="tooltip">To create components</div>
+          Add Command 
+          <b class="caret"></b>
+        </a>
         <ul class="dropdown-menu">
           <li ng-repeat="command in implementedCommands">
           <a ng-click="newCommandAtTopLeft(command); status.isopen=false;" ng-bind="command"></a>
@@ -36,7 +46,14 @@
 
 
       <li class="dropdown" is-open="status.isopen2">
-        <a href="#" data-toggle="dropdown" class="dropdown-toggle">View<b class="caret"></b></a>
+        <a href="#" data-toggle="dropdown" class="tip bottom dropdown-toggle">
+          View<b class="caret"></b>
+
+          <div class="tooltip">
+            Here you can view macros and other graphs, hide or show the console.
+          </div>
+        </a>
+
         <ul class="dropdown-menu">
           <li><a mousetrap="Shift+S" ng-click="status.filesystem = false; $parent.shell = !shell; $parent.shell && $emit('compileGraph'); status.isopen2=false">Toogle Terminal View</a></li>
           <li><a mousetrap="Shift+R" ng-click="status.filesystem = false; viewGraph(rootGraph); status.isopen2=false;">View Root Graph</a></li>
@@ -48,30 +65,69 @@
       </li>
 
       <li class="dropdown" is-open="status.isopen3">
-        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Action<b class="caret"></b></a>
+        <a href="#" data-toggle="dropdown" class="tip bottom dropdown-toggle">
+          <div class="tooltip">
+            Here you can do extra actions, for now you can collapse components and hide the tooltips.
+          </div>
+        Action<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a mousetrap="Ctrl+Shift+up" ng-click="status.filesystem = false; collapseAll(); status.isopen3=false">Collapse all components</a></li>
           <li><a mousetrap="Ctrl+Shift+down" ng-click="status.filesystem = false; uncollapseAll(); status.isopen3=false;">Uncollapse all components</a></li>
+          <li><a mousetrap="Shift+H" ng-click="status.noTooltip = !status.noTooltip; status.isopen3=false;">{{status.noTooltip ? "Show": "Hide"}} helpfull tooltips</a></li>
+
         </ul>
       </li>
 
       <li ng-class="{active:status.filesystem}">
-        <a ng-click="status.filesystem = !status.filesystem">Filesystem</a>
+        <a class="tip bottom" ng-click="status.filesystem = !status.filesystem">Filesystem       
+        <div class="tooltip">
+            Click here to toggle the filesystem view. Here you can download and upload files
+            in the server, were you can use them as input to the workflow, or to download
+            the results.
+          </div></a>
       </li>
-      <li><a ng-click="shell = true; $emit('compileGraph')">
+      <li><a class="tip bottom" ng-click="shell = true; $emit('compileGraph')">
         <span>Compile</span>
+        <div class="tooltip">
+            Click here to compile the workflow, the compiled command will be shown in the console, note
+            that when the console is open, and you modify the graph, it will be <b>compiled automatically</b>.
+          </div>
       </a></li>
-      <li ng-class="{disabled:execStatus}"><a ng-click="shell = true; $emit('runCommand', [])">
+      <li ng-class="{disabled:execStatus}"><a class="tip bottom" ng-click="shell = true; $emit('runCommand', [])">
         <span ng-class="'glyphicon-' + ((execStatus)?'time':'play')" class="glyphicon">&nbsp;</span><span ng-bind="(execStatus)?'Running':'Run'"></span>
+          <div class="tooltip">
+            Click here to execute the workflow, the output will be shown in the console.
+          </div>
       </a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank"><b class="badge">SEND FEEDBACK</b></a></li>
-      <li><a ng-click="status.tutorial = !status.tutorial">Help</a></li>
+      <li><a class="tip bottom" href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank">
+        <b class="badge">FEEDBACK</b>
+          <div class="tooltip">
+          <img src="http://2.bp.blogspot.com/_N0wZmEX8yQ0/R2jT-ihl52I/AAAAAAAAAAs/5E4VwH3JJ6s/s320/sparta%2Bmadness.png" style="width:5em; float: left">
+            <b>
+            FEEDBACK...IS...
+            IMPORTAAAAAAANT!!!!!
+            </b><br>
+            They are what we are gonna eat tonight!!
+            <hr>
+            Ok, seriously, communication is always good, and feedback will be appreciated. 
+          </div>
+      </a></li>
+      <li><a class="tip bottom right" ng-click="status.tutorial = !status.tutorial">Help
+
+          <div class="tooltip">
+            Here will be shown a manual.
+          </div>
+      </a></li>
       <li>
-        <a ng-click="chat.open = !chat.open">
+        <a class="tip bottom right" ng-click="chat.open = !chat.open">
           <span class="glyphicon glyphicon-user"></span> 
           <span class="badge" ng-if="clients.length > 1" ng-bind="clients.length - 1"></span>
+          <div class="tooltip">
+            Click here to toggle the chat view, when a number is shown in front of the icon, it
+            means that there are other peers connected, the number is the number of other connected users.
+          </div>
         </a>
       </li>
 
