--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -109,7 +109,7 @@
             FEEDBACK...IS...
             IMPORTAAAAAAANT!!!!!
             </b><br>
-            They are what we are gonna eat tonight!!
+            They are what we gonna eat tonight!!
             <hr>
             Ok, seriously, communication is always good, and feedback will be appreciated. 
           </div>
