improve tooltip text

--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -32,7 +32,7 @@
 
 
       <a href="#" data-toggle="dropdown" class="tip bottom dropdown-toggle">
-        <div class="tooltip">To create components</div>
+        <div class="tooltip">To create command components, prefer dragging a component connector to an empty area</div>
           Add Command 
           <b class="caret"></b>
         </a>
@@ -104,14 +104,8 @@
       <li><a class="tip bottom" href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank">
         <b class="badge">FEEDBACK</b>
           <div class="tooltip">
-          <img src="http://2.bp.blogspot.com/_N0wZmEX8yQ0/R2jT-ihl52I/AAAAAAAAAAs/5E4VwH3JJ6s/s320/sparta%2Bmadness.png" style="width:5em; float: left">
-            <b>
-            FEEDBACK...IS...
-            IMPORTAAAAAAANT!!!!!
-            </b><br>
-            They are what we gonna eat tonight!!
-            <hr>
-            Ok, seriously, communication is always good, and feedback will be appreciated. 
+            Send you to a form which allows the developer to orgainze the feedback.<br>
+            Communication is always good, and feedback is always appreciated by the developer. 
           </div>
       </a></li>
       <li><a class="tip bottom right" ng-click="status.tutorial = !status.tutorial">Help
