improve tooltip text

--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -104,7 +104,7 @@
       <li><a class="tip bottom" href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank">
         <b class="badge">FEEDBACK</b>
           <div class="tooltip">
-            Send you to a form which allows the developer to orgainze the feedback.<br>
+            This link will send you to a survey which allows the developer to orgainze the feedback.<br>
             Communication is always good, and feedback is always appreciated by the developer. 
           </div>
       </a></li>
