--- a/assets/styles/component.less
+++ b/assets/styles/component.less
@@ -5,6 +5,9 @@
     border-radius:4px;
     border:2px solid #aaa;
     z-index:auto;
+    &:hover{
+        z-index: 1;
+    }
     .input-group-addon, .input-group-btn &> .btn, .form-control{
         height:24px;
         padding:2px 10px;
