--- a/views/ng-templates/popupArea.ejs
+++ b/views/ng-templates/popupArea.ejs
@@ -3,7 +3,7 @@
     <ul class="dropdown-menu well">
       <form ng:submit="graph.popupSubmit(popupText)">
         <div class="input-group input-group-sm tip"><span class="input-group-addon glyphicon glyphicon-tasks"></span>
-          <input type="text" ng-model="popupText" class="form-control">
+          <input type="text" ng-model="$parent.popupText" class="form-control">
           <div class="tooltip">
             <b>Hint1:</b> Use file + extension to create file component
             ,e.g. <i>file.txt</i>
