--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -4,6 +4,8 @@
     <title><%= (locals.project) ? project.name : "ShellHive Demo App" %></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="shortcut icon" href="/favicon2.png" />
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,6 +49,7 @@
     <script src="/js/directives/mousetrap.js"></script>
     <script src="/js/directives/parameterField.js"></script>
     <script src="/js/directives/port.js"></script>
+    <script src="/js/directives/tip.js"></script>
     <script src="/js/controllers/graphController.js"></script>
     <script src="/js/controllers/macros.js"></script>
     <!--ANGULAR SCRIPTS END-->
