--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -35,6 +35,7 @@
 @import 'component.less';
 @import 'directory.less';
 @import 'animations.less';
+@import 'minimap.less';
 
 .form-signin{
   width: 30%;
