--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -41,7 +41,7 @@
 
 
 <div style="z-index:9" class="chat" ng-if="chat.open">
-  <button type="button" class="close" ng-click="chat.open = false, graph.updateLater()" aria-hidden="true">&times;</button>
+  <button type="button" class="close" ng-click="chat.open = false; graph.updateLater()" aria-hidden="true">&times;</button>
   <div style="overflow:auto; padding-top: 1em; height:30%">
   <div ng-repeat="c in clients track by c.id">
     <b ng-style="{color:c.color}" ng-bind="c.name"></b>
