bootstrap preparation for thesis presentation, fix found bug on translating objects, retry g analytics controller installation

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -292,6 +292,11 @@ div[graph]{
   transform: translate(-95%);
 }
 
+.dropdown.open .tip .tooltip {
+    display: none;
+}
+
+
 
 /* This bridges the gap so you can mouse into the tooltip without it disappearing */
 //.tip .tooltip:before {
