--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -12,7 +12,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51662040-1', '188.226.185.166');
+  ga('create', 'UA-51662040-1', 'auto');
   ga('send', 'pageview');
 
 </script>
