--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -119,6 +119,8 @@ div[graph]{
     position:absolute;
     top:0;
     left:0;
+    width: 100%;
+    height: 100%;
     right:0;
     bottom:0;
     transform-origin:0 0;
