--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -20,7 +20,7 @@
   </head>
   <body ng-app="app">
     <div ng-controller="shellProject" style="height:100%">
-      <div graph options="options" class="visual-builder border data-flow" ng-class="{'chat-open':chat.open}"></div>
+      <div graph options="options" class="visual-builder border data-flow" ng-class="{'chat-open':chat.open, 'videobeam': status.videobeam}"></div>
     </div>
   </body>
     <script src="/bower_components/pointerevents-polyfill/pointerevents.min.js"></script>
