Moved docs to this branch, refactored all angular services and some controllers & dirctives to Typescript . Next step is to test this revision the server again

--- a/views/ng-templates/tutorial.ejs
+++ b/views/ng-templates/tutorial.ejs
@@ -34,7 +34,7 @@
         creating and connecting at the same time, which is explained on the next page.
       </p>
       <div class="figure">
-        <img src="//omarcastro.github.com/ShellHive/docs/tutorial/add/dropdown.svg">
+        <img src="/docs/tutorial/add/dropdown.svg">
         <div>dropdown menu which shows a list of available commands</div>
       </div>
       <p>
@@ -65,7 +65,7 @@
         it allows to connect a component to another one.
       </p>
       <div class="figure">
-        <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/hover.svg">
+        <img src="/docs/tutorial/createConnect/hover.svg">
       </div>
       <p>
         When you click and hold the mouse button, and
@@ -73,14 +73,14 @@
         lets call it a "pipe"
       </p>
       <div class="figure">
-        <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/drag.svg">
+        <img src="/docs/tutorial/createConnect/drag.svg">
       </div>
       <p>
         When you release the mouse button in an empty space, a
         context menu appears with options to create a command
       </p>
       <div class="figure">
-        <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/popup.svg">
+        <img src="/docs/tutorial/createConnect/popup.svg">
       </div>
 
       <h3> Next step </h3>
@@ -95,7 +95,7 @@
         <tab heading="Using mouse">
           <p>Chose one of the commands in the list</p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/mouse-select.svg">
+            <img src="/docs/tutorial/createConnect/mouse-select.svg">
           </div>
 
           <p>
@@ -103,19 +103,19 @@
           </p>
 
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/simple-grep-complete.svg">
+            <img src="/docs/tutorial/createConnect/simple-grep-complete.svg">
           </div>    
         </tab>
         <tab heading="Using key (simple command)">
           <p>just write the name of the command you want to create</p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/simple-grep.svg">
+            <img src="/docs/tutorial/createConnect/simple-grep.svg">
           </div> 
           <p>
             And the component is created
           </p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/simple-grep-complete.svg">
+            <img src="/docs/tutorial/createConnect/simple-grep-complete.svg">
           </div>     
 
         </tab>
@@ -123,14 +123,14 @@
         <tab heading="Using key (advanced command)">
           <p>Write the name of the command along with its argumets</p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/advanced-grep.svg">
+            <img src="/docs/tutorial/createConnect/advanced-grep.svg">
           </div>
           <p>
             And the command is created with the information
             automatcally updated based on the arguments
           </p> 
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/advanced-grep-complete.svg">
+            <img src="/docs/tutorial/createConnect/advanced-grep-complete.svg">
           </div>       
         </tab>
 
@@ -140,14 +140,14 @@
             the text will tell that the component to be created is a file
           </p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/file.svg">
+            <img src="/docs/tutorial/createConnect/file.svg">
           </div> 
 
           <p>
             And the file component is created with the choosen name
           </p>
           <div class="figure">
-            <img src="//omarcastro.github.com/ShellHive/docs/tutorial/createConnect/file-complete.svg">
+            <img src="/docs/tutorial/createConnect/file-complete.svg">
           </div>       
         </tab>
       </tabset>
@@ -160,7 +160,7 @@
         The filesystem contains the files to be acessed from the commands.
       </p>
       <div class="figure">
-        <img width="60%" src="//omarcastro.github.com/ShellHive/docs/tutorial/filesystem/sample-filesystem.svg">
+        <img width="60%" src="/docs/tutorial/filesystem/sample-filesystem.svg">
         <div>A sample view of the filesystem</div>
       </div>
 
@@ -170,7 +170,7 @@
       </p>
 
       <div class="figure">
-        <img width="60%" src="//omarcastro.github.com/ShellHive/docs/tutorial/filesystem/sample-execution.svg">
+        <img width="60%" src="/docs/tutorial/filesystem/sample-execution.svg">
         <div>A representation of <code>echo hello > world.txt</code></div>
       </div>
 
@@ -179,7 +179,7 @@
       </p>
 
       <div class="figure">
-        <img width="60%" src="//omarcastro.github.com/ShellHive/docs/tutorial/filesystem/sample-filesystem-after.svg">
+        <img width="60%" src="/docs/tutorial/filesystem/sample-filesystem-after.svg">
         <div>A sample view of the filesystem</div>
       </div>
 
@@ -207,7 +207,7 @@ on the Action menu like the figure below. \n\
 to execute a workflow you just click on the \"Run\" button on the top menu" | md -%>
 
 <div class="figure">
-  <img width="60%" src="//omarcastro.github.com/ShellHive/docs/tutorial/compileExec/view-terminal.svg">
+  <img width="60%" src="/docs/tutorial/compileExec/view-terminal.svg">
   <div>The action menu. The "Run" button is in the top right corner of the picture.  </div>
 </div>
 
