--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -25,22 +25,15 @@
   </body>
     <script src="/bower_components/pointerevents-polyfill/pointerevents.min.js"></script>
     <script src="/js/sails.io.js"></script>
-     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script>!window.jQuery && document.write('<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <!--SCRIPTS-->
     <script src="/bower_components/lazy.js/lazy.js"></script>
-    <script src="/bower_components/angular/angular.min.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--SCRIPTS END-->
     <script src="/bower_components/dropzone/downloads/dropzone.min.js"></script>
     <script src="/bower_components/mousetrap/mousetrap.min.js"></script>
 
     <!--ANGULAR SCRIPTS-->
-    <script src="/js/app.js"></script>
-    <script src="/js/services/alerts.js"></script>
-    <script src="/js/services/creation-popup.js"></script>
-    <script src="/js/services/csrf.js"></script>
+    <script src="/dist/js/app.js"></script>
     <script src="/js/directives/component.js"></script>
     <script src="/js/directives/connector.js"></script>
     <script src="/js/directives/directoryFile.js"></script>
@@ -50,9 +43,8 @@
     <script src="/js/directives/mousetrap.js"></script>
     <script src="/js/directives/parameterField.js"></script>
     <script src="/js/directives/port.js"></script>
-    <script src="/js/directives/tip.js"></script>
     <script src="/js/controllers/graphController.js"></script>
-    <script src="/js/controllers/macros.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!--ANGULAR SCRIPTS END-->
 
     <script src="/bower_components/angular-sails/dist/angular-sails.min.js"></script>
