move main controller to typescript, add typesafe route

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -253,6 +253,7 @@ div[graph]{
         padding: 0;
         border: none;
         font-size: 1em;
+        white-space: pre-line;
     }
 }
 .shell.ng-hide {
